--- a/debian/rules
+++ b/debian/rules
@@ -163,14 +163,7 @@ override_dh_compress:
 	dh_compress -X.source -X.c
 
 override_dh_install:
-ifneq ($(DEB_HOST_MULTIARCH),)
-	# enabling multiarch support in debian/lib*.install
-	sed -i -e 's!usr/lib/\(lib\|pkgconfig\)!usr/lib/*/\1!' debian/lib*.install
-else
-	# disabling multiarch support in debian/lib*.install
-	sed -i -e 's!usr/lib/\*/\(lib\|pkgconfig\)!usr/lib/\1!' debian/lib*.install
-endif
-	dh_install --fail-missing $(SELINUX_EXCLUDE)
+	dh_install $(SELINUX_EXCLUDE)
 
 	# these go into the -pl* packages; -f because they don't exist for an -A build
 	rm -f debian/postgresql-contrib-$(MAJOR_VER)/usr/share/postgresql/$(MAJOR_VER)/extension/pl*
@@ -192,7 +185,7 @@ ifeq (, $(findstring nocheck, $(DEB_BUILD_OPTIONS)))
 endif
 
 override_dh_strip:
-	dh_strip --dbg-package=postgresql-$(MAJOR_VER)-dbg
+	dh_strip --dbg-package=postgresql-bdr-$(MAJOR_VER)-dbg
 
 ifneq ($(DEB_HOST_MULTIARCH),)
 override_dh_gencontrol:
