--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Vcs-Git: git://git@git.postgresql.org/git/2ndquadrant_bdr.git
 Vcs-Browser: http://git.postgresql.org/gitweb/?p=2ndquadrant_bdr.git;a=tree;hb=refs/heads/bdr-plugin/next
 XS-Testsuite: autopkgtest
 
-Package: postgresql-9.4-bdr-plugin
+Package: postgresql-bdr-9.4-bdr-plugin
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:depends}, postgresql-bdr-9.4
 Conflicts: postgresql-9.4-udr-plugin
