--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ XS-Testsuite: autopkgtest
 Package: postgresql-bdr-9.4-bdr-plugin
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:depends}, postgresql-bdr-9.4,
- postgresql-contrib-9.4
+ postgresql-bdr-contrib-9.4
 Conflicts: postgresql-9.4-udr-plugin
 Description: BDR Plugin for PostgreSQL-BDR 9.4
  BDR Plugin for PostgreSQL-BDR 9.4
