--- a/debian/control
+++ b/debian/control
@@ -126,9 +126,6 @@ Description: shared library libpgtypes for PostgreSQL 9.4
 
 Package: postgresql-bdr-9.4
 Architecture: any
-Provides: postgresql-9.4
-Conflicts: postgresql-9.4
-Replaces: postgresql-9.4
 Depends: ${misc:Depends},
  ${shlibs:Depends},
  postgresql-bdr-client-9.4,
@@ -137,6 +134,8 @@ Depends: ${misc:Depends},
  ssl-cert,
  locales
 Suggests: oidentd | ident-server, locales-all
+Provides: postgresql-9.4
+Conflicts: postgresql-9.4
 Description: object-relational SQL database, version 9.4 server
  PostgreSQL is a fully featured object-relational database management
  system.  It supports a large part of the SQL standard and is designed
@@ -156,10 +155,9 @@ Package: postgresql-bdr-9.4-dbg
 Section: debug
 Priority: extra
 Architecture: any
+Depends: ${misc:Depends}, postgresql-bdr-9.4 (= ${binary:Version})
 Provides: postgresql-9.4-dbg
 Conflicts: postgresql-9.4-dbg
-Replaces: postgresql-9.4-dbg
-Depends: ${misc:Depends}, postgresql-bdr-9.4 (= ${binary:Version})
 Description: debug symbols for postgresql-bdr-9.4
  PostgreSQL is a fully featured object-relational database management
  system.  It supports a large part of the SQL standard and is designed
@@ -174,14 +172,13 @@ Description: debug symbols for postgresql-bdr-9.4
 Package: postgresql-bdr-client-9.4
 Architecture: any
 Multi-Arch: foreign
-Provides: postgresql-client-9.4, postgresql-client
-Conflicts: postgresql-client-9.4
-Replaces: postgresql-client-9.4
 Depends: ${misc:Depends},
  ${shlibs:Depends},
  libpq5 (>= ${source:Upstream-Version}),
  postgresql-client-common (>= 142~)
 Suggests: postgresql-bdr-9.4, postgresql-bdr-doc-9.4
+Provides: postgresql-client-9.4, postgresql-client
+Conflicts: postgresql-client-9.4
 Description: front-end programs for PostgreSQL-BDR 9.4
  This package contains client and administrative programs for
  PostgreSQL: these are the interactive terminal client psql and
@@ -198,13 +195,12 @@ Description: front-end programs for PostgreSQL-BDR 9.4
 Package: postgresql-bdr-server-dev-9.4
 Architecture: any
 Section: libdevel
-Provides: postgresql-server-dev-9.4
-Conflicts: postgresql-server-dev-9.4
-Replaces: postgresql-server-dev-9.4
 Depends: ${misc:Depends},
  ${shlibs:Depends},
  libpq-dev (>= 9.4~),
  postgresql-common (>= 142~)
+Provides: postgresql-server-dev-9.4
+Conflicts: postgresql-server-dev-9.4
 Description: development files for PostgreSQL-BDR 9.4 server-side programming
  Header files for compiling SSI code to link into PostgreSQL's backend; for
  example, for C functions to be called from SQL.
@@ -220,6 +216,8 @@ Architecture: all
 Multi-Arch: foreign
 Section: doc
 Depends: ${misc:Depends}
+Provides: postgresql-doc-9.4
+Conflicts: postgresql-doc-9.4
 Description: documentation for the PostgreSQL database management system
  This package contains all README files, user manual, and examples for
  PostgreSQL 9.4. The manual is in HTML format.
@@ -232,6 +230,8 @@ Depends: postgresql-bdr-9.4 (= ${binary:Version}),
  ${misc:Depends},
  ${shlibs:Depends}
 Suggests: libdbd-pg-perl
+Provides: postgresql-contrib-9.4
+Conflicts: postgresql-contrib-9.4
 Description: additional facilities for PostgreSQL
  The PostgreSQL contrib package provides several additional features
  for the PostgreSQL database. This version is built to work with the
@@ -292,7 +292,8 @@ Depends: ${misc:Depends},
  ${shlibs:Depends},
  postgresql-bdr-9.4 (= ${binary:Version}),
  perl
-Provides: postgresql-bdr-plperl
+Provides: postgresql-plperl-9.4, postgresql-plperl
+Conflicts: postgresql-plperl-9.4
 Description: PL/Perl procedural language for PostgreSQL 9.4
  PL/Perl enables an SQL developer to write procedural language functions
  for PostgreSQL 9.4 in Perl.  You need this package if you have any
@@ -305,7 +306,8 @@ Architecture: any
 Depends: ${misc:Depends},
  ${shlibs:Depends},
  postgresql-bdr-9.4 (= ${binary:Version})
-Provides: postgresql-bdr-plpython
+Provides: postgresql-plpython-9.4, postgresql-plpython
+Conflicts: postgresql-plpython-9.4
 Description: PL/Python procedural language for PostgreSQL 9.4
  PL/Python enables an SQL developer to write procedural language functions
  for PostgreSQL 9.4 in Python.  You need this package if you have any
@@ -318,7 +320,8 @@ Architecture: any
 Depends: ${misc:Depends},
  ${shlibs:Depends},
  postgresql-bdr-9.4 (= ${binary:Version})
-Provides: postgresql-bdr-plpython3
+Provides: postgresql-plpython3-9.4, postgresql-plpython3
+Conflicts: postgresql-plpython3-9.4
 Description: PL/Python 3 procedural language for PostgreSQL 9.4
  PL/Python 3 enables an SQL developer to write procedural language functions
  for PostgreSQL 9.4 in Python 3.  You need this package if you have any
@@ -331,7 +334,8 @@ Architecture: any
 Depends: ${misc:Depends},
  ${shlibs:Depends},
  postgresql-bdr-9.4 (= ${binary:Version})
-Provides: postgresql-bdr-pltcl
+Provides: postgresql-pltcl-9.4, postgresql-pltcl
+Conflicts: postgresql-pltcl-9.4
 Description: PL/Tcl procedural language for PostgreSQL 9.4
  PL/Tcl enables an SQL developer to write procedural language functions
  for PostgreSQL 9.4 in Tcl.  You need this package if you have any
