--- a/rpm/postgresql94.spec.in
+++ b/rpm/postgresql94.spec.in
@@ -123,7 +123,7 @@
 # postgres user and group IDs, homedir, etc. You usually don't want to change these
 # even when rebuilding. They're defined as macros mostly so it's obvious when the code
 # refers to the postgres user homedir and when it refers to pgdatadir.
-# 
+#
 # Note that these definitions intentionally ignore {shortname} because the user is
 # shared across multiple packages which should have the same definition of the user.
 #
@@ -140,7 +140,7 @@
 # It should be supplied externally from mock/koji, rpmbuild macros, etc.
 #% define dist donotuse
 
-# Distro difference handling macros 
+# Distro difference handling macros
 # ---------------------------------
 
 # RHEL5 has a bizarre default for the _sharedstatedir macro
@@ -206,12 +206,12 @@
 
 Summary:	PostgreSQL client programs and libraries
 Name:		%{packagename}%{shortmajorversion}
-Version:	9.4.2_bdr%{pgbdrrelease}
+Version:	9.4.4_bdr%{pgbdrrelease}
 Release:	%{releasever}%{releasetag}%{?releasegitsuffix}%{?dist}
 
 License:	PostgreSQL
 Group:		Applications/Databases
-Url:		http://www.postgresql.org/ 
+Url:		http://www.postgresql.org/
 
 # Note: if these files are already in the local srcdir they won't be downloaded.
 Source0:	http://packages.2ndquadrant.com/postgresql-bdr94-2ndquadrant/tarballs/%{packagename}-%{version}%{?githash:-git%{githash}}.tar.bz2
@@ -410,7 +410,7 @@ Provides:   postgresql%{shortmajorversion}-docs%{?_isa} = %{version}-%{release}
 The %{packagename}%{shortmajorversion}-docs package includes the SGML source for the documentation
 as well as the documentation in PDF format and some extra documentation.
 Install this package if you want to help with the PostgreSQL documentation
-project, or if you want to generate printed documentation. This package also 
+project, or if you want to generate printed documentation. This package also
 includes HTML version of the documentation.
 
 
@@ -1375,6 +1375,11 @@ rm -rf %{buildroot}
 # ----------------------------
 
 %changelog
+
+* Mon Jul 6 2015 Craig Ringer <craig@2ndquadrant.com> 9.4.4_bdr1-1_2ndQuadrant
+- Release for bDR 0.9.2
+- Update to 9.4.4
+- Remove Conflicts: with self due to issues with rpm vs yum handling differences
 
 * Tue May 26 2015 Craig Ringer <craig@2ndquadrant.com> 9.4.2_bdr1-1_2ndQuadrant
 - Release for BDR 0.9.1
