--- a/rpm/udr.spec.in
+++ b/rpm/udr.spec.in
@@ -24,7 +24,7 @@
 %{?githash:%define releasegitsuffix _git%{githash}}
 
 Name:		%{packagename}%{shortmajorversion}-udr
-Version:	0.9.1
+Version:	0.9.2
 Release:	1_2ndQuadrant%{?releasegitsuffix}%{?dist}
 Summary:	UDR - Uni-Directional Logical Replication for PostgreSQL
 
@@ -96,6 +96,10 @@ make -s %{?_smp_mflags} DESTDIR=%{buildroot} install
 %doc %{_docdir}/%{shortname}/extension/bdr.conf.sample
 
 %changelog
+* Mon Jul 6 2015 Craig Ringer <craig@2ndquadrant.com> 0.9.2-1_2ndQuadrant
+- Release 0.9.2
+- Bugfixes per release notes
+
 * Tue May 26 2015 Craig Ringer <craig@2ndquadrant.com> 0.9.1-1_2ndQuadrant
 - Release 0.9.1, requiring Pg 9.4.2_bdr1
 - Bugfixes per release notes
