--- a/rpm/postgresql94.spec.in
+++ b/rpm/postgresql94.spec.in
@@ -206,7 +206,7 @@
 
 Summary:	PostgreSQL client programs and libraries
 Name:		%{packagename}%{shortmajorversion}
-Version:	9.4.4_bdr%{pgbdrrelease}
+Version:	9.4.5_bdr%{pgbdrrelease}
 Release:	%{releasever}%{releasetag}%{?releasegitsuffix}%{?dist}
 
 License:	PostgreSQL
@@ -1375,6 +1375,10 @@ rm -rf %{buildroot}
 # ----------------------------
 
 %changelog
+
+* Tue Oct 20 2015 Craig Ringer <craig@2ndquadrant.com> 9.4.5_bdr1-1_2ndQuadrant
+- Release for BDR 0.9.3
+- Update to 9.4.5
 
 * Mon Jul 6 2015 Craig Ringer <craig@2ndquadrant.com> 9.4.4_bdr1-1_2ndQuadrant
 - Release for bDR 0.9.2
